--- a/index.html
+++ b/index.html
@@ -104,12 +104,17 @@
             </form>
         </div>
     </section>
+    <div class="calc">
+         <button id="myButton">Faulty Calculator</button>
 
+    </div>
+       
     <footer>
         <div class="center">
             Copyright &copy; www.myOnlineMeal.com. All rights reserved!
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
 
 </html>
