--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </div>
     </section>
     <div class="calc">
-         <button id="myButton">Faulty Calculator</button>
-
+         <button class="buttons" id="myButton">Faulty Calculator</button>
+        <button class="buttons" id="randomGen">Generate </button>
     </div>
        
     <footer>
@@ -114,7 +114,8 @@
             Copyright &copy; www.myOnlineMeal.com. All rights reserved!
         </div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="./script/script2.js"></script>
 </body>
 
 </html>
